fix(preferences): improved toggle alignment

--- a/styles.css
+++ b/styles.css
@@ -386,7 +386,7 @@ select:hover {
 
 .toggle-area {
     display: flex;
-    align-content: center;
+    align-items: center;
 }
 
 #experiments b {
